StringCompiler/antl-generated/by/bsuir/yapis/compiller/stringcompiller/grammar/StringParser.java


package by.bsuir.yapis.compiller.stringcompiller.grammar;
import org.antlr.stringtemplate.*;
import by.bsuir.yapis.compiller.stringcompiller.type.NamesTable;
import by.bsuir.yapis.compiller.stringcompiller.type.Name;
import by.bsuir.yapis.compiller.stringcompiller.exceptions.NotDefinedVariable;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.stringtemplate.*;
import org.antlr.stringtemplate.language.*;
import java.util.HashMap;
@SuppressWarnings("all")
public class StringParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ASSIGN", "CH", "CHAR", 
		"COMMA", "COMMENT", "DIV", "DO", "DOT_COMMA", "DO_WHILE", "ELSE", "ESC_SEQ", 
		"FOR", "FUN_EMPTY", "FUN_LENGTH", "FUN_PRINT", "HEX_DIGIT", "ID", "IF", 
		"KW", "LOG_SIGN", "L_BR", "L_CBR", "L_FBR", "MAIN", "MINUS", "MULT", "NOT", 
		"NULL", "OCTAL_ESC", "OR", "PLUS", "R_BR", "R_CBR", "R_FBR", "STRING", 
		"TYPE_BOOL", "TYPE_CHAR", "TYPE_STRING", "UNICODE_ESC", "WHILE", "WS"
	};
	public static final int EOF=-1;
	public static final int AND=4;
	public static final int ASSIGN=5;
	public static final int CH=6;
	public static final int CHAR=7;
	public static final int COMMA=8;
	public static final int COMMENT=9;
	public static final int DIV=10;
	public static final int DO=11;
	public static final int DOT_COMMA=12;
	public static final int DO_WHILE=13;
	public static final int ELSE=14;
	public static final int ESC_SEQ=15;
	public static final int FOR=16;
	public static final int FUN_EMPTY=17;
	public static final int FUN_LENGTH=18;
	public static final int FUN_PRINT=19;
	public static final int HEX_DIGIT=20;
	public static final int ID=21;
	public static final int IF=22;
	public static final int KW=23;
	public static final int LOG_SIGN=24;
	public static final int L_BR=25;
	public static final int L_CBR=26;
	public static final int L_FBR=27;
	public static final int MAIN=28;
	public static final int MINUS=29;
	public static final int MULT=30;
	public static final int NOT=31;
	public static final int NULL=32;
	public static final int OCTAL_ESC=33;
	public static final int OR=34;
	public static final int PLUS=35;
	public static final int R_BR=36;
	public static final int R_CBR=37;
	public static final int R_FBR=38;
	public static final int STRING=39;
	public static final int TYPE_BOOL=40;
	public static final int TYPE_CHAR=41;
	public static final int TYPE_STRING=42;
	public static final int UNICODE_ESC=43;
	public static final int WHILE=44;
	public static final int WS=45;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public StringParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public StringParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected StringTemplateGroup templateLib =
	  new StringTemplateGroup("StringParserTemplates", AngleBracketTemplateLexer.class);

	public void setTemplateLib(StringTemplateGroup templateLib) {
	  this.templateLib = templateLib;
	}
	public StringTemplateGroup getTemplateLib() {
	  return templateLib;
	}
	/** allows convenient multi-value initialization:
	 *  "new STAttrMap().put(...).put(...)"
	 */
	@SuppressWarnings("serial")
	public static class STAttrMap extends HashMap<String, Object> {
		public STAttrMap put(String attrName, Object value) {
			super.put(attrName, value);
			return this;
		}
	}
	@Override public String[] getTokenNames() { return StringParser.tokenNames; }
	@Override public String getGrammarFileName() { return "C:\\Users\\1\\Desktop\\String.g"; }


	public static NamesTable names = new NamesTable();
		
	public boolean isDefined(String id) {
		return (names.get(id) != null);
	}


	public static class program_return extends ParserRuleReturnScope {
		public StringTemplate st;
		public Object getTemplate() { return st; }
		public String toString() { return st==null?null:st.toString(); }
	};

	public final StringParser.program_return program() throws RecognitionException {
		StringParser.program_return retval = new StringParser.program_return();
		retval.start = input.LT(1);

		List<Object> list_list_functions=null;
		List<Object> list_list_stat=null;
		RuleReturnScope list_functions = null;
		RuleReturnScope list_stat = null;
		try {

			{

			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==ID) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					{
					pushFollow(FOLLOW_function_in_program910);
					list_functions=function();
					state._fsp--;

					if (list_list_functions==null) list_list_functions=new ArrayList<Object>();
					list_list_functions.add(list_functions.getTemplate());
					}
					break;

				default :
					break loop1;
				}
			}

			{
			match(input,MAIN,FOLLOW_MAIN_in_program916); 
			match(input,L_BR,FOLLOW_L_BR_in_program918); 
			match(input,R_BR,FOLLOW_R_BR_in_program920); 
			match(input,L_FBR,FOLLOW_L_FBR_in_program922); 

			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==DO||LA2_0==FOR||LA2_0==FUN_PRINT||(LA2_0 >= ID && LA2_0 <= IF)||(LA2_0 >= TYPE_BOOL && LA2_0 <= TYPE_STRING)||LA2_0==WHILE) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// C:\\Users\\1\\Desktop\\String.g:110:25: list_stat+= statement
					{
					pushFollow(FOLLOW_statement_in_program929);
					list_stat=statement();
					state._fsp--;

					if (list_list_stat==null) list_list_stat=new ArrayList<Object>();
					list_list_stat.add(list_stat.getTemplate());
					}
					break;

				default :
					break loop2;
				}
			}

			match(input,R_FBR,FOLLOW_R_FBR_in_program933); 
			}

			// TEMPLATE REWRITE
			// 111:2: -> init(stat=$list_statfuncs=$list_functions)
			{
				retval.st = templateLib.getInstanceOf("init",new STAttrMap().put("stat", list_list_stat).put("funcs", list_list_functions));
			}



			}

			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class function_return extends ParserRuleReturnScope {
		public StringTemplate st;
		public Object getTemplate() { return st; }
		public String toString() { return st==null?null:st.toString(); }
	};


	// $ANTLR start "function"
	// C:\\Users\\1\\Desktop\\String.g:114:1: function : (val= ID L_BR ( params )? R_BR L_FBR (list_stat+= statement )* R_FBR ) -> funct(v=$val.textlist_funcs=$list_statlist_params=$params.st);
	public final StringParser.function_return function() throws RecognitionException {
		StringParser.function_return retval = new StringParser.function_return();
		retval.start = input.LT(1);

		Token val=null;
		List<Object> list_list_stat=null;
		ParserRuleReturnScope params1 =null;
		RuleReturnScope list_stat = null;
		try {
			// C:\\Users\\1\\Desktop\\String.g:114:10: ( (val= ID L_BR ( params )? R_BR L_FBR (list_stat+= statement )* R_FBR ) -> funct(v=$val.textlist_funcs=$list_statlist_params=$params.st))
			// C:\\Users\\1\\Desktop\\String.g:115:2: (val= ID L_BR ( params )? R_BR L_FBR (list_stat+= statement )* R_FBR )
			{
			// C:\\Users\\1\\Desktop\\String.g:115:2: (val= ID L_BR ( params )? R_BR L_FBR (list_stat+= statement )* R_FBR )
			// C:\\Users\\1\\Desktop\\String.g:115:3: val= ID L_BR ( params )? R_BR L_FBR (list_stat+= statement )* R_FBR
			{
			val=(Token)match(input,ID,FOLLOW_ID_in_function966); 
			match(input,L_BR,FOLLOW_L_BR_in_function968); 
			// C:\\Users\\1\\Desktop\\String.g:115:15: ( params )?
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==ID) ) {
				alt3=1;
			}
			switch (alt3) {
				case 1 :
					// C:\\Users\\1\\Desktop\\String.g:115:15: params
					{
					pushFollow(FOLLOW_params_in_function970);
					params1=params();
					state._fsp--;

					}
					break;

			}

			match(input,R_BR,FOLLOW_R_BR_in_function973); 
			match(input,L_FBR,FOLLOW_L_FBR_in_function975); 
			// C:\\Users\\1\\Desktop\\String.g:115:34: (list_stat+= statement )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==DO||LA4_0==FOR||LA4_0==FUN_PRINT||(LA4_0 >= ID && LA4_0 <= IF)||(LA4_0 >= TYPE_BOOL && LA4_0 <= TYPE_STRING)||LA4_0==WHILE) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// C:\\Users\\1\\Desktop\\String.g:115:35: list_stat+= statement
					{
					pushFollow(FOLLOW_statement_in_function982);
					list_stat=statement();
					state._fsp--;

					if (list_list_stat==null) list_list_stat=new ArrayList<Object>();
					list_list_stat.add(list_stat.getTemplate());
					}
					break;

				default :
					break loop4;
				}
			}

			match(input,R_FBR,FOLLOW_R_FBR_in_function986); 
			}

			// TEMPLATE REWRITE
			// 116:2: -> funct(v=$val.textlist_funcs=$list_statlist_params=$params.st)
			{
				retval.st = templateLib.getInstanceOf("funct",new STAttrMap().put("v", (val!=null?val.getText():null)).put("list_funcs", list_list_stat).put("list_params", (params1!=null?((StringTemplate)params1.getTemplate()):null)));
			}



			}

			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "function"


	public static class statement_return extends ParserRuleReturnScope {
		public StringTemplate st;
		public Object getTemplate() { return st; }
		public String toString() { return st==null?null:st.toString(); }
	};


	// $ANTLR start "statement"
	// C:\\Users\\1\\Desktop\\String.g:119:1: statement : ( ( ( var_define | fun_print | fun_call | assign ) DOT_COMMA ) | if_stat | while_stat | for_rule | repeat_until );
	public final StringParser.statement_return statement() throws RecognitionException {
		StringParser.statement_return retval = new StringParser.statement_return();
		retval.start = input.LT(1);

		ParserRuleReturnScope var_define2 =null;
		ParserRuleReturnScope fun_print3 =null;
		ParserRuleReturnScope fun_call4 =null;
		ParserRuleReturnScope assign5 =null;
		ParserRuleReturnScope if_stat6 =null;
		ParserRuleReturnScope while_stat7 =null;
		ParserRuleReturnScope for_rule8 =null;
		ParserRuleReturnScope repeat_until9 =null;

		try {
			// C:\\Users\\1\\Desktop\\String.g:119:11: ( ( ( var_define | fun_print | fun_call | assign ) DOT_COMMA ) | if_stat | while_stat | for_rule | repeat_until )
			int alt6=5;
			switch ( input.LA(1) ) {
			case FUN_PRINT:
			case ID:
			case TYPE_BOOL:
			case TYPE_CHAR:
			case TYPE_STRING:
				{
				alt6=1;
				}
				break;
			case IF:
				{
				alt6=2;
				}
				break;
			case WHILE:
				{
				alt6=3;
				}
				break;
			case FOR:
				{
				alt6=4;
				}
				break;
			case DO:
				{
				alt6=5;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 6, 0, input);
				throw nvae;
			}
			switch (alt6) {
				case 1 :
					// C:\\Users\\1\\Desktop\\String.g:120:2: ( ( var_define | fun_print | fun_call | assign ) DOT_COMMA )
					{
					// C:\\Users\\1\\Desktop\\String.g:120:2: ( ( var_define | fun_print | fun_call | assign ) DOT_COMMA )
					// C:\\Users\\1\\Desktop\\String.g:120:3: ( var_define | fun_print | fun_call | assign ) DOT_COMMA
					{
					// C:\\Users\\1\\Desktop\\String.g:120:3: ( var_define | fun_print | fun_call | assign )
					int alt5=4;
					switch ( input.LA(1) ) {
					case TYPE_BOOL:
					case TYPE_CHAR:
					case TYPE_STRING:
						{
						alt5=1;
						}
						break;
					case FUN_PRINT:
						{
						alt5=2;
						}
						break;
					case ID:
						{
						int LA5_3 = input.LA(2);
						if ( (LA5_3==L_BR) ) {
							alt5=3;
						}
						else if ( (LA5_3==ASSIGN) ) {
							alt5=4;
						}

						else {
							int nvaeMark = input.mark();
							try {
								input.consume();
								NoViableAltException nvae =
									new NoViableAltException("", 5, 3, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

						}
						break;
					default:
						NoViableAltException nvae =
							new NoViableAltException("", 5, 0, input);
						throw nvae;
					}
					switch (alt5) {
						case 1 :
							// C:\\Users\\1\\Desktop\\String.g:121:2: var_define
							{
							pushFollow(FOLLOW_var_define_in_statement1029);
							var_define2=var_define();
							state._fsp--;

							retval.st = (var_define2!=null?((StringTemplate)var_define2.getTemplate()):null);
							}
							break;
						case 2 :
							// C:\\Users\\1\\Desktop\\String.g:122:4: fun_print
							{
							pushFollow(FOLLOW_fun_print_in_statement1037);
							fun_print3=fun_print();
							state._fsp--;

							retval.st = (fun_print3!=null?((StringTemplate)fun_print3.getTemplate()):null);
							}
							break;
						case 3 :
							// C:\\Users\\1\\Desktop\\String.g:123:4: fun_call
							{
							pushFollow(FOLLOW_fun_call_in_statement1044);
							fun_call4=fun_call();
							state._fsp--;

							retval.st = (fun_call4!=null?((StringTemplate)fun_call4.getTemplate()):null);
							}
							break;
						case 4 :
							// C:\\Users\\1\\Desktop\\String.g:124:4: assign
							{
							pushFollow(FOLLOW_assign_in_statement1051);
							assign5=assign();
							state._fsp--;

							retval.st = (assign5!=null?((StringTemplate)assign5.getTemplate()):null);
							}
							break;

					}

					match(input,DOT_COMMA,FOLLOW_DOT_COMMA_in_statement1059); 
					}

					}
					break;
				case 2 :
					// C:\\Users\\1\\Desktop\\String.g:126:4: if_stat
					{
					pushFollow(FOLLOW_if_stat_in_statement1065);
					if_stat6=if_stat();
					state._fsp--;

					retval.st = (if_stat6!=null?((StringTemplate)if_stat6.getTemplate()):null);
					}
					break;
				case 3 :
					// C:\\Users\\1\\Desktop\\String.g:127:4: while_stat
					{
					pushFollow(FOLLOW_while_stat_in_statement1072);
					while_stat7=while_stat();
					state._fsp--;

					retval.st = (while_stat7!=null?((StringTemplate)while_stat7.getTemplate()):null);
					}
					break;
				case 4 :
					// C:\\Users\\1\\Desktop\\String.g:128:4: for_rule
					{
					pushFollow(FOLLOW_for_rule_in_statement1078);
					for_rule8=for_rule();
					state._fsp--;

					retval.st = (for_rule8!=null?((StringTemplate)for_rule8.getTemplate()):null);
					}
					break;
				case 5 :
					// C:\\Users\\1\\Desktop\\String.g:129:4: repeat_until
					{
					pushFollow(FOLLOW_repeat_until_in_statement1085);
					repeat_until9=repeat_until();
					state._fsp--;

					retval.st = (repeat_until9!=null?((StringTemplate)repeat_until9.getTemplate()):null);
					}
					break;

			}
			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "statement"


	public static class params_return extends ParserRuleReturnScope {
		public StringTemplate st;
		public Object getTemplate() { return st; }
		public String toString() { return st==null?null:st.toString(); }
	};


	// $ANTLR start "params"
	// C:\\Users\\1\\Desktop\\String.g:132:1: params :t+= ID ids+= ID ( COMMA t+= ID ids+= ID )* -> params_template(list_types=$tlist_ids=$ids);
	public final StringParser.params_return params() throws RecognitionException {
		StringParser.params_return retval = new StringParser.params_return();
		retval.start = input.LT(1);

		Token t=null;
		Token ids=null;
		List<Object> list_t=null;
		List<Object> list_ids=null;

		try {
			// C:\\Users\\1\\Desktop\\String.g:132:8: (t+= ID ids+= ID ( COMMA t+= ID ids+= ID )* -> params_template(list_types=$tlist_ids=$ids))
			// C:\\Users\\1\\Desktop\\String.g:133:2: t+= ID ids+= ID ( COMMA t+= ID ids+= ID )*
			{
			t=(Token)match(input,ID,FOLLOW_ID_in_params1100); 
			if (list_t==null) list_t=new ArrayList<Object>();
			list_t.add(t);
			ids=(Token)match(input,ID,FOLLOW_ID_in_params1104); 
			if (list_ids==null) list_ids=new ArrayList<Object>();
			list_ids.add(ids);
			// C:\\Users\\1\\Desktop\\String.g:133:16: ( COMMA t+= ID ids+= ID )*
			loop7:
			while (true) {
				int alt7=2;
				int LA7_0 = input.LA(1);
				if ( (LA7_0==COMMA) ) {
					alt7=1;
				}

				switch (alt7) {
				case 1 :
					// C:\\Users\\1\\Desktop\\String.g:133:17: COMMA t+= ID ids+= ID
					{
					match(input,COMMA,FOLLOW_COMMA_in_params1107); 
					t=(Token)match(input,ID,FOLLOW_ID_in_params1111); 
					if (list_t==null) list_t=new ArrayList<Object>();
					list_t.add(t);
					ids=(Token)match(input,ID,FOLLOW_ID_in_params1115); 
					if (list_ids==null) list_ids=new ArrayList<Object>();
					list_ids.add(ids);
					}
					break;

				default :
					break loop7;
				}
			}


//					Iterator<Object> it = list_t.iterator();
//					for (Object obj : list_ids) {
//						Object tp = it.next();
//						Token id = (Token) obj;
//						Name n = new Name(id.getText(), $tp.type, id.getLine());
//						names.add(n);
//					}
				
			// TEMPLATE REWRITE
			// 142:2: -> params_template(list_types=$tlist_ids=$ids)
			{
				retval.st = templateLib.getInstanceOf("params_template",new STAttrMap().put("list_types", list_t).put("list_ids", list_ids));
			}



			}

			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "params"


	public static class for_rule_return extends ParserRuleReturnScope {
		public StringTemplate st;
		public Object getTemplate() { return st; }
		public String toString() { return st==null?null:st.toString(); }
	};


	// $ANTLR start "for_rule"
	// C:\\Users\\1\\Desktop\\String.g:145:1: for_rule : FOR L_BR (a= var_define )? DOT_COMMA ( log_expr )? DOT_COMMA (b= var_define )? R_BR L_FBR (value_stat+= body_statement )+ R_FBR -> for_template(param=$a.stparam2=$log_expr.stparam3=$b.ststat=$value_stat);
	public final StringParser.for_rule_return for_rule() throws RecognitionException {
		StringParser.for_rule_return retval = new StringParser.for_rule_return();
		retval.start = input.LT(1);

		List<Object> list_value_stat=null;
		ParserRuleReturnScope a =null;
		ParserRuleReturnScope b =null;
		ParserRuleReturnScope log_expr10 =null;
		RuleReturnScope value_stat = null;
		try {
			// C:\\Users\\1\\Desktop\\String.g:145:10: ( FOR L_BR (a= var_define )? DOT_COMMA ( log_expr )? DOT_COMMA (b= var_define )? R_BR L_FBR (value_stat+= body_statement )+ R_FBR -> for_template(param=$a.stparam2=$log_expr.stparam3=$b.ststat=$value_stat))
			// C:\\Users\\1\\Desktop\\String.g:146:2: FOR L_BR (a= var_define )? DOT_COMMA ( log_expr )? DOT_COMMA (b= var_define )? R_BR L_FBR (value_stat+= body_statement )+ R_FBR
			{
			match(input,FOR,FOLLOW_FOR_in_for_rule1148); 
			match(input,L_BR,FOLLOW_L_BR_in_for_rule1150); 
			// C:\\Users\\1\\Desktop\\String.g:147:4: (a= var_define )?
			int alt8=2;
			int LA8_0 = input.LA(1);
			if ( ((LA8_0 >= TYPE_BOOL && LA8_0 <= TYPE_STRING)) ) {
				alt8=1;
			}
			switch (alt8) {
				case 1 :
					// C:\\Users\\1\\Desktop\\String.g:147:5: a= var_define
					{
					pushFollow(FOLLOW_var_define_in_for_rule1158);
					a=var_define();
					state._fsp--;

					}
					break;

			}

			match(input,DOT_COMMA,FOLLOW_DOT_COMMA_in_for_rule1162); 
			// C:\\Users\\1\\Desktop\\String.g:147:30: ( log_expr )?
			int alt9=2;
			int LA9_0 = input.LA(1);
			if ( (LA9_0==CHAR||(LA9_0 >= FUN_EMPTY && LA9_0 <= FUN_PRINT)||LA9_0==ID||LA9_0==L_BR||(LA9_0 >= NOT && LA9_0 <= NULL)||LA9_0==STRING) ) {
				alt9=1;
			}
			switch (alt9) {
				case 1 :
					// C:\\Users\\1\\Desktop\\String.g:147:31: log_expr
					{
					pushFollow(FOLLOW_log_expr_in_for_rule1165);
					log_expr10=log_expr();
					state._fsp--;

					}
					break;

			}

			match(input,DOT_COMMA,FOLLOW_DOT_COMMA_in_for_rule1169); 
			// C:\\Users\\1\\Desktop\\String.g:147:52: (b= var_define )?
			int alt10=2;
			int LA10_0 = input.LA(1);
			if ( ((LA10_0 >= TYPE_BOOL && LA10_0 <= TYPE_STRING)) ) {
				alt10=1;
			}
			switch (alt10) {
				case 1 :
					// C:\\Users\\1\\Desktop\\String.g:147:53: b= var_define
					{
					pushFollow(FOLLOW_var_define_in_for_rule1174);
					b=var_define();
					state._fsp--;

					}
					break;

			}

			match(input,R_BR,FOLLOW_R_BR_in_for_rule1178); 
			match(input,L_FBR,FOLLOW_L_FBR_in_for_rule1180); 
			// C:\\Users\\1\\Desktop\\String.g:148:4: (value_stat+= body_statement )+
			int cnt11=0;
			loop11:
			while (true) {
				int alt11=2;
				int LA11_0 = input.LA(1);
				if ( (LA11_0==FUN_PRINT||LA11_0==ID) ) {
					alt11=1;
				}

				switch (alt11) {
				case 1 :
					// C:\\Users\\1\\Desktop\\String.g:148:5: value_stat+= body_statement
					{
					pushFollow(FOLLOW_body_statement_in_for_rule1188);
					value_stat=body_statement();
					state._fsp--;

					if (list_value_stat==null) list_value_stat=new ArrayList<Object>();
					list_value_stat.add(value_stat.getTemplate());
					}
					break;

				default :
					if ( cnt11 >= 1 ) break loop11;
					EarlyExitException eee = new EarlyExitException(11, input);
					throw eee;
				}
				cnt11++;
			}
